--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,12 +17,19 @@ body {
   user-select: none;
   cursor: default;
 }
+::-webkit-scrollbar {
+  display: none;
+}
 #page {
   display: flex;
   height: 100vh;
 }
 aside {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 60px;
   flex-basis: 60px;
   background-color: #202d8b;
   text-align: center;
@@ -53,8 +60,13 @@ aside {
   z-index: 100;
 }
 nav {
+  position: fixed;
+  top: 0;
+  left: 60px;
+  bottom: 0;
+  width: 180px;
   flex-basis: 180px;
-  padding-left: 18px;
+  padding-left: 20px;
   background: linear-gradient(#1b1f80, #253992);
 }
 nav h1 {
@@ -64,8 +76,8 @@ nav h1 {
 nav h3 {
   color: #6269a0;
   font-weight: 400;
-  font-size: 0.85em;
-  margin: 30px 0;
+  font-size: 0.9em;
+  margin: 35px 0 25px 0;
 }
 nav ul {
   padding: 0;
@@ -74,20 +86,34 @@ nav ul {
 ul li {
   color: #6269a0;
   list-style: none;
-  margin: 15px 0;
-  font-size: 0.87em;
+  margin: 20px 0;
+  font-size: 0.95em;
   cursor: pointer;
-  vertical-align: middle;
 }
 ul img {
-  width: 14px;
-  margin-right: 10px;
-  margin-top: 15px;
+  width: 22px;
+  margin-right: 12px;
+  vertical-align: top;
 }
 ul .active {
   color: white;
 }
 main {
+  margin-left: 260px;
+  width: 100%;
   flex-basis: 70%;
   background: linear-gradient(#f3f6ff, #ffffff);
+}
+main header {
+  padding-left: 15px;
+}
+main header p {
+  color: #9b9da9;
+  font-weight: 500;
+}
+.main {
+  padding-left: 15px;
+}
+.main h2 {
+  color: #1400ad;
 }
