--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -160,20 +160,20 @@ main header p {
   background-color: rgb(239, 242, 253);
 }
 .item-info p,
-.item-info span {
+.item-info .keywords-icons {
   margin: 1px 10px;
 }
 .item-info p {
   font-size: 0.7em;
 }
-.item-info span {
+.item-info .keywords-icons {
   font-size: 0.6em;
   font-weight: 400;
-  color: rgb(50, 200, 100);
-  padding: 1px 3px;
-  border-radius: 7px;
+  color: #040b49;
+  padding: 1px 4px;
+  border-radius: 5px;
   margin-right: 0px;
-  border: 1px solid rgb(50, 200, 100);
+  border: 1px solid #040b49;
 }
 .item-info .item-name {
   font-size: 0.9em;
@@ -185,4 +185,7 @@ main header p {
   width: 11px;
   margin: 0 4px;
   cursor: pointer;
+}
+p .expire {
+  color: rgb(231, 151, 2);
 }
